[package]
edition = "2021"
name = "konachan"
version = "0.1.0"

[features]
fake = []
safe = []
tauri = []
web = []
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bounce = "0.9.0"
chrono = "0.4.42"
color-thief = "0.2.2"
fake = {version = "2.10.0", features = ["derive", "chrono"]}
futures-util = "0.3.31"
gloo-console = "0.3.0"
gloo-events = "0.2.0"
gloo-net = "0.6.0"
gloo-render = "0.2.0"
gloo-timers = {version = "0.3.0", features = ["futures"]}
gloo-utils = "0.2.0"
indexmap = "2.11.4"
js-sys = "0.3.81"
lazy_static = "1.5.0"
nanoid = "0.4.0"
rand = "0.8.5"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
stylist = {version = "0.13.0", features = ["yew_integration"]}
tauri-sys = {git = "https://github.com/JonasKruckenberg/tauri-sys", features = ["all"], branch = "v2"}
wasm-bindgen = "0.2.104"
wasm-bindgen-futures = "0.4.54"
web-sys = {version = "0.3.81", features = [
  "Document",
  "Element",
  "HtmlElement",
  "HtmlLiElement",
  "HtmlImageElement",
  "HtmlCanvasElement",
  "HtmlAnchorElement",
  "ImageData",
  "CanvasRenderingContext2d",
  "Window",
  "Url",
  "Navigator",
  "EventListener",
  "EventTarget",
  "DomStringMap",
  "ServiceWorkerContainer",
  "RegistrationOptions",
  "CssStyleDeclaration",
]}
yew = {version = "0.21.0", features = ["csr"]}
yew-hooks = "0.3.4"
yew-i18n = "0.1.3"
yew_icons = {version = "0.8.0", features = [
  "BootstrapSunFill",
  "BootstrapMoonStarsFill",
  "FontAwesomeSolidDownload",
  "BootstrapCheckCircleFill",
  "BootstrapInfoCircleFill",
  "FeatherRefreshCcw",
]}
