[package]
edition = "2024"
name = "konachan"
version = "0.1.0"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[features]
fake = []
safe = []
tauri = ["dep:tauri-sys"]
web = []
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
missing_docs = "warn"

[lints.clippy]
complexity = "warn"
correctness = "deny"
perf = "warn"
style = "warn"
suspicious = "warn"

[dependencies]
chrono = "0.4.44"
color-thief = "0.2.2"
fake = { version = "5.1.0", features = ["derive", "chrono"] }
futures-util = "0.3.32"
getrandom = { version = "0.4.2", features = ["wasm_js"] }
gloo-console = "0.4.0"
gloo-events = "0.3.0"
gloo-net = "0.7.0"
gloo-render = "0.3.0"
gloo-timers = { version = "0.4.0", features = ["futures"] }
gloo-utils = "0.3.0"
indexmap = "2.13.0"
js-sys = "0.3.92"
lazy_static = "1.5.0"
nanoid = "0.4.0"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
stylist = { version = "0.15.1", features = ["yew_integration"] }
tauri-sys = {git = "https://github.com/JonasKruckenberg/tauri-sys", features = ["all"], branch = "v2", optional = true}
wasm-bindgen = "0.2.115"
wasm-bindgen-futures = "0.4.65"
web-sys = { version = "0.3.92", features = [
  "Document",
  "Element",
  "HtmlElement",
  "HtmlLiElement",
  "HtmlImageElement",
  "HtmlCanvasElement",
  "HtmlAnchorElement",
  "ImageData",
  "CanvasRenderingContext2d",
  "Window",
  "Url",
  "Navigator",
  "EventListener",
  "EventTarget",
  "DomStringMap",
  "ServiceWorkerContainer",
  "RegistrationOptions",
  "CssStyleDeclaration",
] }
yew = { version = "0.23.0", features = ["csr"] }
yew-hooks = "0.6.1"
yew_icons = { version = "0.10.0", features = ["bootstrap", "lucide", "font_awesome_solid"] }
